--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "4.0.0",
   "type": "module",
   "license": "MIT",
-  "author": "arifszn",
+  "author": "PRBN65",
   "repository": {
     "type": "git",
     "url": "https://github.com/arifszn/gitprofile.git"
